# Telegram_360_Beta

./: .env.prod.example  .gitignore  CLIENT_CONFIGURATION.txt  CLOUDPANEL_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DOCKER_VS_CLOUDPANEL.txt  DOCUMENTATION_INDEX.md  FILES_TO_DELETE_NATIVE.txt  FINAL_STATUS.txt  INSTALLATION_NATIVE.txt  INSTALLATION_STEPS.txt  PRE_INSTALLATION_CONFIG.txt  QUICK_NATIVE_SUMMARY.txt  QUICK_START.md  README.md  SETUP_COMPLETE.txt  TECHNICAL_OPTIMIZATIONS.md  TELETHON_SETUP.txt  check-requirements.sh  deploy-init.sh  deploy.sh  docker-compose.prod.yml  docker-compose.vps.yml  instalar.sh  install-native.sh  rollback.sh  setup-https.sh
dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/src/: App.tsx  main.tsx
dashboard/src/api/: index.ts
dashboard/src/components/: Modal.tsx  Toast.tsx
dashboard/src/components/ui/: avatar.tsx  (+6 more)
dashboard/src/demo/: DemoProvider.tsx
dashboard/src/layouts/: AdminLayout.tsx  ClientLayout.tsx
dashboard/src/pages/: Canales.tsx  Clientes.tsx  Ganancias.tsx  Habilitacion.tsx  Login.tsx  Pagos.tsx  Presupuestos.tsx  Resumen.tsx
dashboard/src/utils/: csv.ts
deploy/: README.md  nginx.conf  nginx_native.conf  run_backend.py  run_workers_manager.py  supervisord_native.conf
deploy/systemd/: README.md  backend.service  medios_pago.service  workers.service
medios_pago/: main.py  pyproject.toml  routes_methods.py
telegram-workers/: Dockerfile  docker-compose.yml
telegram-workers/workers/: authenticate.py  create_client.py  plataforma_session.session
(+12 files in other folders)
